<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="325dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ICON -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/register_icon"
                android:src="@drawable/ic_launcher"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@string/icon_desc" />


            <!-- USERNAME -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/register_icon"
                android:padding="8dp"
                android:id="@+id/username_icon"
                android:background="@color/colorEditTextDark"
                android:src="@drawable/ic_supervisor_account_black_24dp"
                android:tint="@color/colorEditText"
                android:contentDescription="@string/username_icon_desc" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/username_icon"
                android:layout_alignTop="@+id/username_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/username_icon"
                android:layout_toRightOf="@id/username_icon"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:id="@+id/username_input_field"
                android:background="@color/colorEditText"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/username_hint"
                android:singleLine="true" />


            <!-- EMAIL -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/username_icon"
                android:layout_alignEnd="@+id/username_icon"
                android:layout_alignRight="@id/username_icon"
                android:layout_alignStart="@+id/username_icon"
                android:layout_alignLeft="@id/username_icon"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:id="@+id/email_icon"
                android:background="@color/colorEditTextDark"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="@color/colorEditText"
                android:contentDescription="@string/email_icon_desc" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/email_icon"
                android:layout_alignTop="@+id/email_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/email_icon"
                android:layout_toRightOf="@id/email_icon"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:id="@+id/email_input_field"
                android:background="@color/colorEditText"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" />


            <!-- PASSWORD -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/email_icon"
                android:layout_alignEnd="@+id/email_icon"
                android:layout_alignRight="@id/email_icon"
                android:layout_alignStart="@+id/email_icon"
                android:layout_alignLeft="@id/email_icon"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:id="@+id/password_icon"
                android:background="@color/colorEditTextDark"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:tint="@color/colorEditText"
                android:contentDescription="@string/password_icon_desc" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/password_icon"
                android:layout_alignTop="@+id/password_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/password_icon"
                android:layout_toRightOf="@id/password_icon"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:id="@+id/password_input_field"
                android:background="@color/colorEditText"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />


            <!-- RE-TYPE PASSWORD -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/password_icon"
                android:layout_alignEnd="@+id/password_icon"
                android:layout_alignRight="@id/password_icon"
                android:layout_alignStart="@+id/password_icon"
                android:layout_alignLeft="@id/password_icon"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:id="@+id/retype_password_icon"
                android:background="@color/colorEditTextDark"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:tint="@color/colorEditText"
                android:contentDescription="@string/password_icon_desc" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/retype_password_icon"
                android:layout_alignTop="@+id/retype_password_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/retype_password_icon"
                android:layout_toRightOf="@id/retype_password_icon"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:id="@+id/retype_password_input_field"
                android:background="@color/colorEditText"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/retype_password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />


            <!-- REGISTER -->

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/retype_password_input_field"
                android:layout_marginTop="8dp"
                android:padding="25dp"
                android:id="@+id/sign_up_button"
                android:background="@color/colorButton"
                android:textColor="@color/colorText"
                android:text="@string/sign_up_button_text" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>